--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "<%= description %>",
   "author": "<%= author %>",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development gulp dev --silent",
-    "build": "cross-env NODE_ENV=production gulp build --silent",
-    "test": "cross-env NODE_ENV=test gulp build --silent",
-    "unit": "cross-env NODE_ENV=unit gulp build --silent"
+    "dev": "cross-env NODE_ENV=development gulp development --cwd ./build --gulpfile ./build/index.js --silent",
+    "build": "cross-env NODE_ENV=production gulp production --cwd ./build --gulpfile ./build/index.js --silent",
+    "test": "cross-env NODE_ENV=test gulp production --cwd ./build --gulpfile ./build/index.js --silent",
+    "unit": "cross-env NODE_ENV=unit gulp production --cwd ./build --gulpfile ./build/index.js --silent"
   },
   "keywords": [],
   "license": "MIT",
@@ -38,10 +38,10 @@
     "gulp-zip": "^4.2.0",
     "http-proxy-middleware": "^0.18.0",
     "postcss-copy": "^7.1.0",
+    "postcss-csso": "^3.0.0",
     "postcss-extend": "^1.0.5",
     "postcss-import": "^11.1.0",
     "postcss-url": "^7.3.2",
-    "posthtml-include": "^1.2.0",
     "precss": "^3.1.2",
     "rollup": "^0.63.4",
     "rollup-plugin-babel": "^3.0.7",
@@ -51,7 +51,7 @@
     "rollup-plugin-json": "^3.0.0",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-postcss": "^1.6.2",
-    "rollup-plugin-posthtml-template": "^1.3.0",
+    "rollup-plugin-string": "^2.0.2",
     "run-sequence": "^2.2.1",
     "through2": "^2.0.3",
     "vinyl-ftp": "^0.6.1"
