--- a/package.json
+++ b/package.json
@@ -4,58 +4,41 @@
   "description": "<%= description %>",
   "author": "<%= author %>",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development gulp development --cwd ./build --gulpfile ./build/index.js --silent",
-    "build": "cross-env NODE_ENV=production gulp production --cwd ./build --gulpfile ./build/index.js --silent",
-    "test": "cross-env NODE_ENV=test gulp production --cwd ./build --gulpfile ./build/index.js --silent",
-    "unit": "cross-env NODE_ENV=unit gulp production --cwd ./build --gulpfile ./build/index.js --silent"
+    "dev": "cross-env NODE_ENV=development node ./build/index.js",
+    "build": "cross-env NODE_ENV=production node ./build/index.js",
+    "test": "cross-env NODE_ENV=test node ./build/index.js"
   },
   "keywords": [],
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^9.0.2",
+    "autoprefixer": "^9.1.0",
     "babel-core": "^6.26.3",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-latest": "^6.24.1",
     "browser-sync": "^2.24.6",
+    "chalk": "^2.4.1",
+    "chokidar": "^2.0.4",
+    "clean-css": "^4.2.1",
     "cross-env": "^5.2.0",
-    "cssnano": "^4.0.5",
     "del": "^3.0.0",
-    "gulp": "^3.9.1",
-    "gulp-flatten": "^0.4.0",
-    "gulp-htmlmin": "^4.0.0",
-    "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-inline-source": "^3.2.0",
-    "gulp-plumber": "^1.2.0",
-    "gulp-postcss": "^7.0.1",
-    "gulp-prefix": "0.0.15",
-    "gulp-remove-empty-lines": "^0.1.0",
-    "gulp-remove-html": "^1.3.0",
-    "gulp-rev": "^8.1.1",
-    "gulp-rev-collector": "^1.3.1",
-    "gulp-rollup-each": "^2.1.1",
-    "gulp-uglify": "^3.0.1",
-    "gulp-zip": "^4.2.0",
+    "eslint": "^5.3.0",
+    "fs-extra": "^7.0.0",
+    "glob": "^7.1.2",
+    "html-minifier": "^3.5.19",
     "http-proxy-middleware": "^0.18.0",
-    "postcss-copy": "^7.1.0",
-    "postcss-csso": "^3.0.0",
-    "postcss-extend": "^1.0.5",
-    "postcss-import": "^11.1.0",
-    "postcss-url": "^7.3.2",
-    "precss": "^3.1.2",
-    "rollup": "^0.63.4",
+    "imagemin": "^6.0.0",
+    "less": "^3.8.1",
+    "rollup": "^0.64.1",
     "rollup-plugin-babel": "^3.0.7",
-    "rollup-plugin-commonjs": "^9.1.4",
-    "rollup-plugin-eslint": "^5.0.0",
-    "rollup-plugin-includepaths": "^0.2.2",
-    "rollup-plugin-json": "^3.0.0",
+    "rollup-plugin-commonjs": "^9.1.5",
+    "rollup-plugin-includepaths": "^0.2.3",
     "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-re": "^1.0.7",
-    "rollup-plugin-string": "^2.0.2",
-    "run-sequence": "^2.2.1",
+    "rollup-pluginutils": "^2.3.1",
+    "style-inject": "^0.3.0",
     "through2": "^2.0.3",
-    "vinyl-ftp": "^0.6.1"
+    "uglify-js": "^3.4.7",
+    "write": "^1.0.3"
   },
   "dependencies": {}
 }
