--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "http-proxy-middleware": "^0.18.0",
     "imagemin": "^6.0.0",
     "less": "^3.8.1",
+    "merge": "^1.2.0",
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.5",
@@ -38,7 +39,8 @@
     "style-inject": "^0.3.0",
     "through2": "^2.0.3",
     "uglify-js": "^3.4.7",
-    "write": "^1.0.3"
+    "write": "^1.0.3",
+    "yargs": "^12.0.1"
   },
   "dependencies": {}
 }
