--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "imagemin": "^6.0.0",
     "less": "^3.8.1",
     "merge": "^1.2.0",
+		"postcss": "^7.0.2",
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.5",
